Fix overflow issues

--- a/style/Battle.sass
+++ b/style/Battle.sass
@@ -9,7 +9,7 @@
 	$panelHeight: 10.5em
 	$rightWidth: 40em
 	$chatHeight: 50%
-	height: 100%
+	height: 99%
 	> *
 		+setHeight(100%)
 		float: left
