--- a/style/BattleList.sass
+++ b/style/BattleList.sass
@@ -119,7 +119,7 @@
 // Layout
 .battleList
 	$infoWidth: 17em
-	height: 100%
+	height: 99%
 	> *
 		+setHeight(100%)
 		float: left
